Added jumbotron background image and edited some styling for it

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,3 +24,14 @@ $navbar-default-bg: #073B15;
 .center {
   text-align: center;
 }
+
+.jumbotron {
+  background-image: asset-url('italy.jpeg');
+  background-size: cover;
+  height: 300px;
+  background-position: bottom;
+}
+
+.jumbotron h1, .jumbotron h2 {
+  color: white;
+}
