Add bootstrap template to homepage

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,3 +35,9 @@ $navbar-default-bg: #073B15;
 .jumbotron h1, .jumbotron h2 {
   color: white;
 }
+
+.btn-xlarge {
+  border-radius: 0;
+  background-color: #b59f7b;
+  
+}
