Tinker with styling

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,7 +37,7 @@ $navbar-default-bg: #073B15;
 }
 
 .btn-xlarge {
-  border-radius: 0;
-  background-color: #b59f7b;
-  
+  border-radius: 2px;
+  background-color: #586863;
+  color: white;
 }
