--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,4 @@
-<h1 align="center">All Recipes</h1>
-<hr />
-
+<%= render 'shared/page_title', title: 'All Recipes' %>
 <% @recipes.each do |recipe| %>
   <div class="row">
     <div class="col-md-2">
