Feature gravatar in recipes index as well

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,10 @@
 <%= render 'shared/page_title', title: 'All Recipes' %>
+
 <% @recipes.each do |recipe| %>
   <div class="row">
     <div class="col-md-2">
-      <section class="center">
-
+      <section class="center chef_info">
+        <%= gravatar_for(recipe.chef, size: 120) %>
       </section>
     </div>
     <div class="col-md-8 well">
