--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
 
   <body>
     <%= render 'layouts/navigation' %>
+    <%= render 'layouts/messages' %>
     <div class="container">
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
   </body>
+
 </html>
