--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -17,5 +17,7 @@
       </div>
     </p>
   </div>
+  <div class="recipe-actions">
+    <%= link_to "Edit recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning" %>
+  </div>
 </div>
-<%= link_to "Back to Recipes List", '/recipes' %>
