Add integration test for deleting recipes. Build destroy method and provide buttons to satisfy test.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,3 +54,10 @@ $navbar-default-bg: #073B15;
 .chef_info {
   margin-top: 10px;
 }
+
+.recipe-actions {
+  padding: 5px;
+  a {
+    color: #fff;
+  }
+}
