--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -18,6 +18,9 @@
     </p>
   </div>
   <div class="recipe-actions">
-    <%= link_to "Edit recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning" %>
+    <%= link_to "Edit Recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning" %>
+    <%= link_to "Delete Recipe", recipe_path(@recipe), method: :delete,
+              data: { confirm: "Are you sure you want to delete this recipe?" },
+              class: "btn btn-xs btn-danger" %>
   </div>
 </div>
