--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -22,5 +22,6 @@
     <%= link_to "Delete Recipe", recipe_path(@recipe), method: :delete,
               data: { confirm: "Are you sure you want to delete this recipe?" },
               class: "btn btn-xs btn-danger" %>
+    <%= link_to "Return to Recipes", recipes_path, class: "btn btn-xs btn-primary" %>
   </div>
 </div>
