--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <h1>Welcome to MyRecipes</h1>
   <h2>The best recipe sharing app!</h2>
   <p>
-    <%= link_to "Sign Up or Log In", "#", class: "btn btn-lg btn-xlarge" %>
+    <%= link_to "View All Recipes", recipes_path, class: "btn btn-lg btn-xlarge" %>
   </p>
 </div>
 
