--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -1,6 +1,10 @@
 <%= render 'shared/page_title', title: "All Chefs" %>
 
 <div align="center">
+  <%= will_paginate %>
+</div>
+
+<div align="center">
   <% @chefs.each do |chef| %>
     <ul class="listing">
       <div class="row">
@@ -18,4 +22,8 @@
       </div>
     </ul>
   <% end %>
+</div>
+
+<div align="center">
+  <%= will_paginate %>
 </div>
