--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -8,12 +8,12 @@
 
 <h4 align="center"><%= @chef.chefname %>'s Recipes</h4>
 
-<div class="center">
+<div align="center">
   <%= will_paginate @chef_recipes %>
 </div>
 
 <%= render 'recipes/recipe', obj: @chef_recipes %>
 
-<div class="center">
+<div align="center">
   <%= will_paginate @chef_recipes %>
 </div>
