--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -15,6 +15,11 @@
             <li>
               <small><%= pluralize(chef.recipes.count, "recipe") if chef.recipes %></small>
             </li>
+            <li>
+              <%= link_to "Delete chef", chef_path(chef), method: :delete, class: "btn btn-danger btn-sm",
+                          data: { confirm: "Are you sure you want to delete this chef and all
+                            associated recipes?" } %>
+            </li>
           </div>
         </div>
       </ul>
