Add new view and build login form.

--- a/app/views/chefs/_form.html.erb
+++ b/app/views/chefs/_form.html.erb
@@ -26,7 +26,7 @@
           <%= f.label :password %>
         </div>
         <div class="col-md-8">
-          <%= f.password_field :password, class: "form-control", placeholder: "Enter a password",
+          <%= f.password_field :password, class: "form-control", placeholder: "Choose a password",
                   autofocus: true %>
         </div>
       </div>
