--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -40,7 +40,7 @@
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
-            <li><%= link_to "Log Out", login_path, method: :delete %></li>
+            <li><%= link_to "Log Out", logout_path, method: :delete %></li>
           </ul>
         </li>
       </ul>
