--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -18,10 +18,12 @@
     </p>
   </div>
   <div class="recipe-actions">
-    <%= link_to "Edit Recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning" %>
-    <%= link_to "Delete Recipe", recipe_path(@recipe), method: :delete,
-              data: { confirm: "Are you sure you want to delete this recipe?" },
-              class: "btn btn-xs btn-danger" %>
+    <% if logged_in? && current_chef == @recipe.chef %>
+      <%= link_to "Edit Recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning" %>
+      <%= link_to "Delete Recipe", recipe_path(@recipe), method: :delete,
+                data: { confirm: "Are you sure you want to delete this recipe?" },
+                class: "btn btn-xs btn-danger" %>
+    <% end %>
     <%= link_to "Return to Recipes", recipes_path, class: "btn btn-xs btn-primary" %>
   </div>
 </div>
