--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -36,7 +36,8 @@
         <% if logged_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false"><%= current_chef.chefname.capitalize %>'s Profile <span class="caret"></span></a>
+                  aria-expanded="false"><%= current_chef.chefname.capitalize %>'s Profile
+                  <%= "(Admin)" if current_chef.admin? %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "View Your Profile", chef_path(current_chef) %></li>
               <li><%= link_to "Edit Your Profile", edit_chef_path(current_chef) %></li>
