--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/page_title', title: "Chef #{@ingredient.name}'s profile" %>
+<%= render 'shared/page_title', title: "#{@ingredient.name}" %>
 
 <% if @ingredient.recipes.count != 0 %>
   <h4 align="center">Recipes Containing <%= @ingredient.name %></h4>
