--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -30,6 +30,13 @@
               aria-expanded="false">Ingredients <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "All Ingredients", ingredients_path %></li>
+            <% Ingredient.all.each do |ing| %>
+              <li>
+                <%= link_to ing.name, ingredient_path(ing) %>
+              </li>
+            <% end %>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "New Ingredients", new_ingredient_path %></li>
           </ul>
         </li>
       </ul>
