--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -36,7 +36,7 @@
               </li>
             <% end %>
             <li role="separator" class="divider"></li>
-            <li><%= link_to "New Ingredients", new_ingredient_path %></li>
+            <li><%= link_to "New Ingredient", new_ingredient_path %></li>
           </ul>
         </li>
       </ul>
