Add ability to check boxes for ingredients when creating new recipe.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -81,3 +81,7 @@ $navbar-default-bg: #073B15;
   padding-left: 10px;
   padding-right: 10px;
 }
+
+.input_checkbox input {
+  width: auto !important;
+}
