--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,6 +3,12 @@
   <h4 class="center description"><strong>Steps:</strong></h4>
   <hr />
   <%= simple_format(@recipe.description) %>
+  <hr />
+  <% if @recipe.ingredients.any? %>
+    <p>
+      Ingredients: <%= render @recipe.ingredients %>
+    </p>
+  <% end %>
   <div class="pull-right">
     <p class="center">
       <em>Created By:</em>
