--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -4,4 +4,8 @@
 
 <% comments.each do |comment| %>
   <%= render(partial: 'comments/comment', object: comment) %>
-<% end %> 
+<% end %>
+
+<div align="center">
+  <%= will_paginate comments %>
+</div>
