--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -28,6 +28,7 @@
               <% cb.label(class: "checkbox-inline input_checkbox") { cb.check_box(class: "checkbox") + cb.text } %>
             <% end %>
           </div>
+        </div>
       </div>
       <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
