--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,10 +26,14 @@ $navbar-default-bg: #073B15;
 }
 
 .jumbotron {
-  background-image: asset-url('italy.jpeg');
+  background-image: asset-url('IMG_5727.JPG');
   background-size: cover;
-  height: 300px;
-  background-position: bottom;
+  height: 700px;
+  background-position: top;
+}
+
+.jumbotron h1 {
+  margin-top: 300px;
 }
 
 .jumbotron h1, .jumbotron h2 {
