--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -7,6 +7,9 @@
     </div>
   </div>
   <div class="message-container">
-
+    <%= form_for(@message, :html => { class: "form-horizontal", role: "form" }) do |f| %>
+      <%= f.text_area :content, class: "form-control", placeholder: "Submit chat content. . . " %>
+      <%= f.submit "Send", class: "btn btn-primary" %>
+    <% end %>
   </div>
 </div>
