--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,6 +66,10 @@ $navbar-default-bg: #073B15;
   }
 }
 
+.btn-primary {
+  background-color: green;
+}
+
 .listing {
   list-style: none;
   padding-left: 0;
